--- a/public-bubble/public/stylesheets/main.css
+++ b/public-bubble/public/stylesheets/main.css
@@ -1,11 +1,11 @@
 html, body, #container { height: 70%; }
 
 #bubble-banner {
-      background-image: url('../images/bubble-logo-large-transparent.png');
-      background-size: 400px;
+      background-image: url('../images/logo_rework.svg');
+      background-size: 15%;
       /*background-color: #2D2D87;*/
       background-repeat: no-repeat;
-      height: 150px;
+      height: 100px;
       background-position: 0 2px;
       min-width: 986px;
       font-size: 16px;
