added svg into img tag

--- a/public-bubble/app/views/main.scala.html
+++ b/public-bubble/app/views/main.scala.html
@@ -20,8 +20,9 @@
     </head>
     <div style="background-color: #2D2D87">
     <header class="row">
-        <div id="bubble-banner" class="small-12 columns">
-        <nav id="bubble-banner-nav" class="nav-bar right ">
+        <div id="bubble-banner" >
+        <img src="@routes.Assets.at("images/logo_rework.svg")" class="small-4 columns">
+        <nav id="bubble-banner-nav" class="right">
             <ul class="button-group">
             <li><a class="button nav-button" href="/events">
                 <img class="nav-icon" src="@routes.Assets.at("icons/fi-calendar.svg")">
