fixed date save bug

--- a/public-bubble/app/views/createEvent.scala.html
+++ b/public-bubble/app/views/createEvent.scala.html
@@ -21,8 +21,8 @@
 
         @defining(java.time.LocalDateTime.now().toString.substring(0,10)) { today =>
 
-        @helper.inputDate(eventForm("displayFrom"), 'min -> today, '_help -> "", 'class -> "small-4 columns", '_label -> "Display on site from...")
-        @helper.inputDate(eventForm("displayUntil"), 'min -> today, '_help -> "", 'class -> "small-4 columns", '_label -> "...until...")
+        @helper.inputDate(eventForm("displayFrom"), 'min -> today, '_help -> "", 'class -> "datepicker small-4 columns", '_label -> "Display on site from...")
+        @helper.inputDate(eventForm("displayUntil"), 'min -> today, '_help -> "", 'class -> "datepicker small-4 columns", '_label -> "...until...")
         }
     <div class="row">
         <button id="saveButton" class="small-12 centered" type="submit">Save</button>
