added no content page

--- a/public-bubble/app/views/blogs.scala.html
+++ b/public-bubble/app/views/blogs.scala.html
@@ -1,6 +1,11 @@
 @(blog: Blog)
 
 @main("Welcome to Play") {
+
+    if (blog.isEmpty) {
+
+<h1>Come back later for more blogs!!!</h1>
+
     <section>
         <!--<div style="background:blue">-->
             <div class="row">
@@ -49,4 +54,5 @@
       doc.setAttribute('data-useragent', navigator.userAgent);
     </script>
 
+}
 }
