--- a/public-bubble/app/views/blogs.scala.html
+++ b/public-bubble/app/views/blogs.scala.html
@@ -29,7 +29,7 @@
                 <img src="@{mainBlog.image1Url}"> <!-- http://placehold.it/800x370&text=[img] -->
             </div>
             <div>
-                @Html(mainBlog.content)
+                <p>@Html(mainBlog.content)</p>
             </div>
     </section>
 </div>
