--- a/public-bubble/app/views/main.scala.html
+++ b/public-bubble/app/views/main.scala.html
@@ -73,7 +73,7 @@
     <script>
     $(document).foundation();
   </script>
-    <script src="../assets/js/templates/jquery.js"></script>
+    git<script src="../assets/js/templates/jquery.js"></script>
     <script src="../assets/js/templates/foundation.js"></script>
     <script>
       $(document).foundation();
