--- a/slick-public-bubble/app/views/main.scala.html
+++ b/slick-public-bubble/app/views/main.scala.html
@@ -17,7 +17,7 @@
   ('__proto__' in {} ? 'zepto' : 'jquery') +
   '.js><\/script>')
   </script>
-        <script src="../../assets/js/jquery.js"></script>
+        <script src="../../assets/javascripts/jquery.js"></script>
         <script src="js/foundation.min.js"></script>
         <script>
     $(document).foundation();
