--- a/public-bubble/app/views/main.scala.html
+++ b/public-bubble/app/views/main.scala.html
@@ -64,15 +64,11 @@
                     <p>&copy; Copyright no one at all. Go to town.</p>
                 </div>
     </footer>
-    </div>t
+    </div>
 
 
     <!-- foundation dependencies -->
     <script src="@routes.Assets.at("javascripts/foundation/foundation.js")"></script>
-    <!--<script src="@routes.Assets.at("javascripts/react/react.js")"></script>-->
-        <script>
-    $(document).foundation();
-  </script>
     <script>
       $(document).foundation();
 
