image upload looking better

--- a/public-bubble/app/views/createBlog.scala.html
+++ b/public-bubble/app/views/createBlog.scala.html
@@ -26,6 +26,7 @@
 <script type="text/jsx" src="@routes.Assets.at("javascripts/components/blog-list.js")" ></script>
 <script type="text/jsx" src="@routes.Assets.at("javascripts/components/blogs-components.js")" ></script>
 @if(!blogForm.value.isEmpty) {
+<script src="@routes.Assets.at("javascripts/foundation/foundation.alert.js")" defer></script>
 <script type="text/jsx" src="@routes.Assets.at("javascripts/components/image-upload-button.js")" defer></script>
 
 <div id="imageUpload"></div>
