--- a/public-bubble/app/views/createEvent.scala.html
+++ b/public-bubble/app/views/createEvent.scala.html
@@ -4,12 +4,7 @@
 
 @wysiwyg()
 
-<script src="@routes.Assets.at("javascripts/react/react.js")"></script>
-<script src="@routes.Assets.at("javascripts/react/JSXTransformer.js")"></script>
-<script src="@routes.Assets.at("javascripts/jquery-ui/jquery-ui.min.js")"></script>
-
 <div class="g-signin2" data-onsuccess="onSignIn"></div>
-
 <div id="eventsBox" class="small-2 columns"></div>
 
 <form class="row" id="eventForm" action="@routes.EventsController.save" method="post">
@@ -17,18 +12,14 @@
         @helper.inputText(eventForm("id"), '_label -> "ID", 'readonly -> "readonly", '_help -> "")
         @helper.inputText(eventForm("title"), '_label -> "Title")
         @helper.inputText(eventForm("location"), '_label -> "Location")
-
-
         @helper.input(eventForm("startTime"), '_label -> "Start Time") { (id, name, value, args) =>
                 <input type="datetime-local" name="@name" id="@id" @toHtmlArgs(args)>
             }
         @helper.input(eventForm("endTime"), '_label -> "End Time", '_value -> "boogaloo") { (id, name, value, args) =>
                 <input type="datetime-local" name="@name" id="@id" @toHtmlArgs(args)>
             }
-
         @helper.inputText(eventForm("description"), '_label -> "Description", 'id -> "wysiwyg-editor")
-
-        }
+    </div>
     <div class="row">
         <button id="saveButton" class="small-12 centered" type="submit">Save</button>
     </div>
@@ -37,6 +28,7 @@
 <script type="text/jsx" src="@routes.Assets.at("javascripts/components/event-list.js")" ></script>
 <script type="text/jsx" src="@routes.Assets.at("javascripts/components/events-components.js")" ></script>
 <script type="text/jsx" src="@routes.Assets.at("javascripts/components/events-calendar.js")" ></script>
+
 @if(!eventForm.value.isEmpty) {
 <script src="@routes.Assets.at("javascripts/foundation/foundation.alert.js")" defer></script>
 <script type="text/jsx" src="@routes.Assets.at("javascripts/components/image-upload-button.js")" defer></script>
@@ -47,4 +39,5 @@
         document.getElementById('imageUpload')
     );
     </script>
+}
 }
