entity list react component built

--- a/public-bubble/app/views/createEvent.scala.html
+++ b/public-bubble/app/views/createEvent.scala.html
@@ -38,6 +38,11 @@
         <ImageUploadButton imageUploadUrl="@routes.EventsController.uploadImage"/>,
         document.getElementById('imageUpload')
     );
+
+    React.render(
+            <EntityList dataSourceUrl="/events/all" entityName="event"/>,
+            document.getElementById('eventsBox')
+        );
     </script>
 }
 }
