--- a/public-bubble/app/views/createEvent.scala.html
+++ b/public-bubble/app/views/createEvent.scala.html
@@ -13,10 +13,10 @@
         @helper.inputText(eventForm("title"), '_label -> "Title")
         @helper.inputText(eventForm("location"), '_label -> "Location")
         @helper.input(eventForm("startTime"), '_label -> "Start Time", '_help -> "" ) { (id, name, value, args) =>
-                <input type="datetime-local" name="@name" id="@id" @toHtmlArgs(args)>
+                <input type="datetime-local" name="@name" id="@id" value="@value" @toHtmlArgs(args)>
             }
         @helper.input(eventForm("endTime"), '_label -> "End Time", '_help -> "") { (id, name, value, args) =>
-                <input type="datetime-local" name="@name" id="@id" @toHtmlArgs(args)>
+                <input type="datetime-local" name="@name" id="@id" value="@value" @toHtmlArgs(args)>
             }
         @helper.inputText(eventForm("description"), '_label -> "Description", '_help -> "", 'id -> "wysiwyg-editor")
     </div>
