Add nav button for about us

--- a/public-bubble/app/views/main.scala.html
+++ b/public-bubble/app/views/main.scala.html
@@ -28,6 +28,10 @@
         <img src="@routes.Assets.at("images/logo_rework.svg")" class="small-4 columns">
         <nav id="bubble-banner-nav" class="right">
             <ul class="button-group">
+            <li><a class="button nav-button" href="/aboutUs">
+                <img class="nav-icon" src="@routes.Assets.at("icons/fi-home.svg")">
+                <label>About Us</label>
+            </a></li>
             <li><a class="button nav-button" href="/events">
                 <img class="nav-icon" src="@routes.Assets.at("icons/fi-calendar.svg")">
                 <label>Events</label>
