--- a/public-bubble/app/views/events.scala.html
+++ b/public-bubble/app/views/events.scala.html
@@ -21,11 +21,16 @@ Ooga booga booga
         <div class="large-9 columns" >
             <h3>@{mainEvent.title}</h3>
             <h3>@{mainEvent.location}</h3>
-            <h6>From: @{
-                mainEvent.startTime.toLocalDateTime.get
+            <h6>@{
+                val startTime = mainEvent.startTime;
+                val endTime = mainEvent.endTime;
 
-                }</h6>
-            <h6>Until: @{mainEvent.endTime}</h6>
+                if(startTime.getDay == endTime.getDay) {
+                mainEvent.startTime.format("EEEE dd MMMM YYYY hh:mm")
+                } + "-" + mainEvent.endTime.format("hh:mm")
+                }
+
+                </h6>
                 <div>
                     <img src="@{mainEvent.image1Url}"> <!-- http://placehold.it/800x370&text=[img] -->
                 </div>
