--- a/public-bubble/app/views/createEvent.scala.html
+++ b/public-bubble/app/views/createEvent.scala.html
@@ -6,12 +6,19 @@
 
 <div class="g-signin2" data-onsuccess="onSignIn"></div>
 <div id="eventsBox" class="small-2 columns"></div>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
 
 <form class="row" id="eventForm" action="@routes.EventsController.save" method="post">
     <div class="small-8 columns small-centered" >
         @helper.inputText(eventForm("id"), '_label -> "ID", 'readonly -> "readonly", '_help -> "")
         @helper.inputText(eventForm("title"), '_label -> "Title")
+
+
         @helper.inputText(eventForm("location"), '_label -> "Location")
+        <script>
+            var autoCompleteAddressBox = new google.maps.places.Autocomplete(document.getElementById("location"), null);
+        </script>
+
         @helper.input(eventForm("startTime"), '_label -> "Start Time", '_help -> "" ) { (id, name, value, args) =>
                 <input type="datetime-local" name="@name" id="@id" value="@value" @toHtmlArgs(args)>
             }
