Make Google Map not fullscreen

--- a/public-bubble/app/views/googleMapTag.scala.html
+++ b/public-bubble/app/views/googleMapTag.scala.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
     <style>
-        html, body, #map-canvas {
-        height: 100%;
+        #map-canvas {
+        height: 200px;
+        width: 200px;
         margin: 0;
         padding: 0;
         }
