--- a/public-bubble/app/views/googleMapTag.scala.html
+++ b/public-bubble/app/views/googleMapTag.scala.html
@@ -1,8 +1,10 @@
+@import play.api.Play
+
 <!DOCTYPE html>
     <style>
         #map-canvas {
-        height: 200px;
-        width: 200px;
+        height: 300px;
+        width: 300px;
         margin: 0;
         padding: 0;
         }
@@ -50,13 +52,54 @@
         }
 
     </style>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=@{Play.current.configuration.getString("google.apiKey")}"></script>
 
     <script>
+
+ function putOnMap(place, map) {
+        var marker =
+            new google.maps.Marker({
+                map: map,
+                anchorPoint: new google.maps.Point(0, -29)
+            });
+
+        // If the place has a geometry, then present it on a map.
+        if (place.geometry.viewport) {
+
+
+        map.fitBounds(place.geometry.viewport);
+        } else {
+        map.setCenter(place.geometry.location);
+        map.setZoom(17);  // Why 17? Because it looks good.
+        }
+        marker.setIcon(({
+            url: place.icon,
+            size: new google.maps.Size(71, 71),
+            origin: new google.maps.Point(0, 0),
+            anchor: new google.maps.Point(17, 34),
+            scaledSize: new google.maps.Size(35, 35)
+        }));
+        marker.setPosition(place.geometry.location);
+        marker.setVisible(true);
+
+        var address = '';
+    if (place.address_components) {
+      address = [
+        (place.address_components[0] && place.address_components[0].short_name || ''),
+        (place.address_components[1] && place.address_components[1].short_name || ''),
+        (place.address_components[2] && place.address_components[2].short_name || '')
+      ].join(' ');
+    }
+
+        var infowindow = new google.maps.InfoWindow();
+        infowindow.setContent('<div><strong>' + place.name + '</strong><br>' + address);
+        infowindow.open(map, marker);
+    }
+
 function initialize() {
 
   var mapOptions = {
-    center: new google.maps.LatLng(-33.8688, 151.2195),
+    center: new google.maps.LatLng(51.4992, 0.1247),
     zoom: 13
   };
 
@@ -70,60 +113,20 @@ function initialize() {
   map.controls[google.maps.ControlPosition.TOP_LEFT].push(input);
   map.controls[google.maps.ControlPosition.TOP_LEFT].push(types);
 
-  var autocomplete = new google.maps.places.Autocomplete(input);
-  autocomplete.bindTo('bounds', map);
+  var placesService = new google.maps.places.PlacesService(map);
+  var request = {query:"Local Government Association, Smith Square, City of London, London, United Kingdom"}
+  function placeSearchCallback(placeResultArray, placesServiceStatus, placeSearchPagination) {
+     putOnMap(placeResultArray[0], map)
+  }
 
-  var infowindow = new google.maps.InfoWindow();
-  var marker = new google.maps.Marker({
-    map: map,
-    anchorPoint: new google.maps.Point(0, -29)
-  });
-
-  google.maps.event.addListener(autocomplete, 'place_changed', function() {
-    infowindow.close();
-    marker.setVisible(false);
-    var place = autocomplete.getPlace();
-    if (!place.geometry) {
-      window.alert("Autocomplete's returned place contains no geometry");
-      return;
-    }
-
-    // If the place has a geometry, then present it on a map.
-    if (place.geometry.viewport) {
-      map.fitBounds(place.geometry.viewport);
-    } else {
-      map.setCenter(place.geometry.location);
-      map.setZoom(17);  // Why 17? Because it looks good.
-    }
-    marker.setIcon(({
-      url: place.icon,
-      size: new google.maps.Size(71, 71),
-      origin: new google.maps.Point(0, 0),
-      anchor: new google.maps.Point(17, 34),
-      scaledSize: new google.maps.Size(35, 35)
-    }));
-    marker.setPosition(place.geometry.location);
-    marker.setVisible(true);
-
-    var address = '';
-    if (place.address_components) {
-      address = [
-        (place.address_components[0] && place.address_components[0].short_name || ''),
-        (place.address_components[1] && place.address_components[1].short_name || ''),
-        (place.address_components[2] && place.address_components[2].short_name || '')
-      ].join(' ');
-    }
-
-    infowindow.setContent('<div><strong>' + place.name + '</strong><br>' + address);
-    infowindow.open(map, marker);
-  });
+  placesService.textSearch(request, placeSearchCallback)
 }
 
-google.maps.event.addDomListener(window, 'load', initialize);
+    google.maps.event.addDomListener(window, 'load', initialize);
+
+
 
     </script>
 </head>
 <body>
-<input id="pac-input" class="controls" type="text"
-       placeholder="Enter a location">
 <div id="map-canvas"></div>
