--- a/public-bubble/app/views/events.scala.html
+++ b/public-bubble/app/views/events.scala.html
@@ -1,25 +1,30 @@
-@(mainEvent : Event, remainingEvents: Seq[Event])
+@import play.api.Play
+@import util.GooglePlace
+
+@(mainEvent : Event, remainingEvents: Seq[Event], eventLocation: Option[GooglePlace])
 
 @main("Events") {
 <div id="eventPage" class="row">
     <div class="large-3 columns">
-        <div class="sidebar">
+        <div class="sidebar"> <!-- TODO move into tag -->
             <div class="hide-for-small">
 
                 <nav class="side-nav ">
                     @for(event <- remainingEvents) {
-
-                    <h3><a href="/event/@event.id">@event.title</a></h3>
+                         <h3><a href="/event/@event.id">@event.title</a></h3>
                     }
                 </nav>
             </div>
         </div>
     </div>
     <section>
-
         <div class="large-9 columns" >
             <h3>@{mainEvent.title}</h3>
-            <h3>@{mainEvent.location}</h3>
+            <h3>@if(eventLocation.isEmpty) {
+                     @{mainEvent.location}
+                } else {
+                    @{eventLocation.get.coords}
+                }</h3>
             <>@if(mainEvent.startTime.toLocalDateTime.getDayOfYear == mainEvent.endTime.toLocalDateTime.getDayOfYear) {
                 @{mainEvent.startTime.format("EEEE dd MMMM yyyy")}<br/>
                     @{s"""
@@ -33,6 +38,18 @@
                 <div>
                     <img src="@{mainEvent.image1Url}"> <!-- http://placehold.it/800x370&text=[img] -->
                 </div>
+                <style>
+                    .bigMap {height: 150px; width:150px;}
+                </style>
+
+                <div id="map">
+
+                </div>
+                <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=@{Play.current.configuration.getString("google.api.browserKey")}"></script>
+                <script type="text/jsx" src="@routes.Assets.at("javascripts/components/google-map.js")" defer></script>
+                <script type="text/jsx">
+                        React.render(<GoogleMap/>, document.getElementById("map"));
+                </script>
                 <div>
                     <p>@Html(mainEvent.description)</p>
                 </div>
